Fixed the layout shift issue.

--- a/css/styles.css
+++ b/css/styles.css
@@ -153,6 +153,7 @@ a.body-link:hover {
 	color: white;
 	text-decoration: none;
 	font-size: 16px;
+  line-height: 3rem;
 	transition: color 0.3s ease;
 }
 
